New in spot 2.11.3.dev  (not yet released)

  Library:

  - The following new trivial simplifications have been implemented for SEREs:
    - f|[+] = [+] if f rejects [*0]
    - f|[*] = [*] if f accepts [*0]
    - f&&[+] = f if f rejects [*0]
    - b:b[*i..j] = b[*max(i,1)..j]
    - b[*i..j]:b[*k..l] = b[*max(i,1)+max(k,1)-1, j+l-1]

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

  Bug fixes:

  - When merging initial states from state-based automata with
    multiple initial states (because Spot supports only one), the HOA
    parser could break state-based acceptance.  (Issue #522.)

New in spot 2.11.3  (2022-12-09)

  Bug fixes:

  - Automata-based implication checks, used to simplify formulas were
    slower than necessary because the translator was configured to
    favor determinism unnecessarily.  (Issue #521.)

  - Automata-based implication checks for f&g and f|g could be
    very slow when those n-ary operator had two many arguments.
    They have been limited to 16 operands, but this value can be changed
    with option -x tls-max-ops=N.  (Issue #521 too.)

  - Running ltl_to_tgba_fm() with an output_aborter (which is done
    during automata-based implication checks) would leak memory on
    abort.

  - configure --with-pythondir should also redefine pyexecdir,
    otherwise, libraries get installed in the wrong place on Debian.
    (Issue #512.)

  - The HOA parser used to silently declare unused and undefined states
    (e.g., when the State: header declare many more states than the body
    of the file).  It now warns about those.

  - 'autfilt -c ...' should display a match count even in presence of
    parse errors.

  - Calling solve_parity_game() multiple times on the same automaton
    used to append the new strategy to the existing one instead of
    overwriting it.

New in spot 2.11.2  (2022-10-26)

  Command-line tools:

  - The --stats specifications %s, %e, %t for printing the number of