@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2009, 2010, 2012, 2014-2022 Laboratoire de
+# Copyright (C) 2009, 2010, 2012, 2014-2023 Laboratoire de
 # Recherche et Développement de l'Epita (LRDE).
 # Copyright (C) 2003, 2004 Laboratoire d'Informatique de Paris 6 (LIP6),
 # département Systèmes Répartis Coopératifs (SRC), Université Pierre
@@ -346,9 +346,8 @@ digraph "" {
   0 -> 0 [label="b", id="E1", tooltip="\\\\E\n#1"]
   1 -> 1 [label="a", id="E2", tooltip="\\\\E\n#2"]
   2 [label="s2"]
-  2 -> 0 [label="b", id="E3", tooltip="\\\\E\n#3"]
-  3 -> 1 [label="a", id="E4", tooltip="\\\\E\n#4"]
-  3 -> 0 [label="b", id="E5", tooltip="\\\\E\n#5"]
+  3 -> 1 [label="a", id="E3", tooltip="\\\\E\n#3"]
+  3 -> 0 [label="b", id="E4", tooltip="\\\\E\n#4"]
 }
 EOF
 
